# fractals

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/draw/: lines.rs
examples/ifs/: ajb_spiral_fern.rs  barnsley_fern.rs  koch_curve.rs  z2_heighway_dragon.rs
examples/recursive/: sierpinski.rs
